<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.gojol.notto.ui.home.HomeFragment"
        android:label="@string/bottom_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_popular"
        android:name="com.gojol.notto.ui.popular.PopularFragment"
        android:label="@string/bottom_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/navigation_option"
        android:name="com.gojol.notto.ui.option.OptionFragment"
        android:label="@string/bottom_option"
        tools:layout="@layout/fragment_option" />
</navigation>
