<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.gojol.notto.ui.label.dialog.delete.DeleteLabelDialogViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:context=".ui.label.dialog.delete.DeleteLabelDialogFragment"
        style="@style/edit_label_dialog_layout">

        <TextView
            android:id="@+id/tv_delete_label_dialog_title"
            android:text="@string/edit_label_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/edit_label_title" />

        <TextView
            android:id="@+id/tv_delete_label_dialog_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_small"
            android:text="@string/edit_label_delete_alert"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_delete_label_dialog_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_x_large"
            android:text="@string/cancel"
            android:onClick="@{() -> viewmodel.clickCancel()}"
            app:layout_constraintEnd_toStartOf="@+id/tv_delete_label_dialog_okay"
            app:layout_constraintTop_toBottomOf="@+id/tv_delete_label_dialog_content"
            style="@style/edit_label_dialog_cancel_ok_text" />

        <TextView
            android:id="@+id/tv_delete_label_dialog_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay"
            android:onClick="@{() -> viewmodel.clickOkay()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_delete_label_dialog_content"
            style="@style/edit_label_dialog_cancel_ok_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
