<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.label.CreateOrEditLabelFragment">

        <TextView
            android:id="@+id/tv_edit_label_dialog_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="라벨 추가"
            style="@style/edit_label_title" />

        <EditText
            android:id="@+id/et_edit_label"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="@dimen/space_small"
            android:layout_marginTop="@dimen/space_x_large"
            android:paddingHorizontal="@dimen/space_small"
            android:background="@drawable/bg_edit_label"
            android:hint="@string/edit_label_edit_text_hint"
            android:inputType="textShortMessage"
            android:maxLength="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_label_dialog_title" />

        <TextView
            android:id="@+id/tv_edit_label_cancel"
            style="@style/edit_label_dialog_cancel_ok_text"
            android:layout_marginEnd="@dimen/space_x_large"
            android:text="@string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_edit_label_okay"
            app:layout_constraintTop_toBottomOf="@+id/et_edit_label" />

        <TextView
            android:id="@+id/tv_edit_label_okay"
            style="@style/edit_label_dialog_cancel_ok_text"
            android:text="@string/okay"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_edit_label"
            app:layout_constraintTop_toBottomOf="@+id/et_edit_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
